
0.133 - Able to load counts file with no genes in R.
        Able to load counts file with one gene in R.
        Load methods package when running Rscript (workaround for bug in R v3.2.2).

0.132 - link_up_annotations forgiving of duplicated ID if ID not used.
        Execute can have a specified location for state and log files.

0.131 - Log transformation is now performed using Varistran.
        Ignore spurious whitespace when loading GFF files.
        Default to norm factors of 1 if calcNormFactors fails
            (can happen if counts contains one row).

0.130 - grace.status returns old status, bam reader restores old status after finishing

0.129 - slight tweak to error reporting
        don't require SplitsTree to be installed

0.128 - modify-features: feature start can't be shifted to negative location

0.127 - test-counts: now has a mode for fitnoise 
        norm-from-samples: optimized
        igv-plots: optimized

0.126 - fitnoise.R now uses makeForkCluster

0.125 - test-counts: modes common and trend were incorrectly outputting ln fold changes,
            now correctly output log2 fold changes
        heatmap: now always filters out genes with identical expression in all samples,
            rather than crashing

0.124 - Fix bug checking for JAR availability.

0.123 - Add fitnoise.R
        Fix bug in annotation.Annotation.relative_to for strand==-1
        Report memory use in log files
        Fix to "power-variant-call:"
        Slightly reduced memory usage in igv-plots and filter 
          (changed iterator implementation in samconsensus.Depth)
        "storage" module added, provides convenient collections of memory mapped numpy arrays, not currently in use

0.122 - Revert back to starting new processes manually on posix systems (something seems to be broken).

0.121 - More Windows compatability:
        Default to using multiprocessing to start new processes.

0.120 - Use os.urandom rather than file /dev/urandom.