@@ -2,6 +2,8 @@
 0.133 - Able to load counts file with no genes in R.
         Able to load counts file with one gene in R.
         Load methods package when running Rscript (workaround for bug in R v3.2.2).
+        GFF write quotes commas.
+        similarity: can cope with two columns of data.
 
 0.132 - link_up_annotations forgiving of duplicated ID if ID not used.
         Execute can have a specified location for state and log files.
